--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NossoAmigoSecreto</title>
+    <title>SeuAmigoSecreto</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -20,6 +20,10 @@
         <%= yield %>
       </div>
     </main>
+
+    <footer>
+      <%= render "shared/footer" %>
+    </footer>
 
   </body>
 </html>
