--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
       <a href="/" class="brand-logo">
         <img src="/assets/logo.png" alt="" class="logo-img">
         <span class="logo-title">
-          Nosso Amigo Secreto
+          Seu Amigo Secreto
         </span>
       </a>
 
